terraform/main.tf
provider "aws" {
  region = "us-east-2"
}

resource "aws_instance" "api" {
  ami           = "ami-0c02fb55956c7d316"
  instance_type = "t2.micro"

  key_name = "your-key"

  tags = {
    Name = "api-deployment"
  }
}

resource "aws_security_group" "api_sg" {
  name = "api_sg"

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
